# Lumina

./: Cargo.toml  README.md  build.rs  csalad  measure.ps1  notes.md  run_with_check.bat  test.cmd
assets/: bubble.kra  fish.kra  fish.kra~  player.kra  player.kra~
assets/shaders/: background.frag  background.vert  draw.frag  draw.vert  gui.frag  gui.vert  model.frag  model.tesc  model.tese  model.vert  player.frag  player.vert  postprocess.frag  postprocess.vert  terrain.frag  terrain.vert
assets/textures/player/: cropper.py
engine/: Cargo.toml  build.rs
engine/assets/: seagrass.kra
engine/src/: app.rs  config.rs  engine_config.rs  input_handler.rs  lib.rs  logic.rs  macros.rs  math.rs  references.rs  render.rs  render_context.rs  shared.rs  transformable.rs  window_handler.rs
engine/tests/: macro_test.rs  resource_manager_test.rs  transformation_test.rs  vec2_test.rs  vec3_test.rs  world_test.rs
game/: cargo.toml
game/src/: camera.rs  fish.rs  foreground.rs  game.rs  lib.rs  main.rs  player.rs  postprocess.rs  postprocess_uniform_buffer.rs  scene.rs  sea_trash.rs
macro_lib/: cargo.toml
macro_lib/src/: lib.rs
src/: lib.rs  main.rs  render_context.rs
src/engine/: camera.rs  collider.rs  command_queue.rs  frame_buffer.rs  gl_command.rs  input_handler.rs  mesh_handler.rs  model.rs  model_group.rs  physics.rs  player.rs  player_renderer.rs  references.rs  renderer.rs  scene.rs  scene_renderer.rs  shader.rs  shader_program.rs  texture.rs  texture_handler.rs  transformation.rs  vec2.rs  vec3.rs  window_handler.rs
tests/: world_test.rs
(+373 files in other folders)
